# vibe_bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/skills/bitbank/: SKILL.md
.claude/skills/bitbank-bitflyer-analysis/: SKILL.md
.claude/skills/bitflyer/: SKILL.md
.claude/skills/coincheck/: SKILL.md
.claude/skills/get-logs/: SKILL.md
.claude/skills/gmo/: SKILL.md
.vim/: coc-settings.json
scratch/cdodex/: fetch_bitbank_btc_jpy_recent_transactions.py  fetch_bitflyer_fx_btc_jpy_recent_transactions.py
scratch/claude/: fx_btc_jpy_executions_with_position.py
scratch/codex/: fetch_bitbank_btc_jpy_recent_transactions.py  fetch_bitflyer_fx_btc_jpy_recent_transactions.py  merge_bitbank_bitflyer_arbitrage_transactions.py  plot_maker_to_hedge_slippage.py
src/trades/: bitbank_bitflyer_arbitrage.py
src/vibe_bot/: __init__.py  update_asset.py
src/vibe_bot/bitbank/: __init__.py  auth.py  errors.py  http.py  models.py  private.py  public.py  rate_limit.py  ws_private.py  ws_public.py
src/vibe_bot/bitflyer/: __init__.py  auth.py  errors.py  http.py  models.py  private.py  public.py  rate_limit.py  ws_private.py  ws_public.py
src/vibe_bot/coincheck/: __init__.py  auth.py  errors.py  http.py  models.py  private.py  public.py  rate_limit.py  ws_private.py  ws_public.py
src/vibe_bot/gmo/: __init__.py  auth.py  errors.py  http.py  models.py  private.py  public.py  rate_limit.py  ws_private.py  ws_public.py
temp/: analyse.md  coincheck_api.md  coincheck_difference.md  history_analyze.md  update_asset.py
(+50 files in other folders)
