[project]
name = "vibe-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ken", email = "veryshj123@gmail.com" }
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "websockets>=16.0",
    "python-dotenv>=1.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=9.13.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_bot"]
